--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "material-kit-react",
-  "author": "Devias IO",
-  "licence": "MIT",
-  "version": "2.1.1",
+  "name": "camping-admin",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "dev": "next",
+    "dev:template": "next ./src_template",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -22,22 +21,34 @@
     "@mui/material": "5.10.5",
     "@mui/system": "5.10.5",
     "@mui/x-date-pickers": "5.0.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@types/lodash": "^4.14.191",
     "@zalter/identity-js": "1.2.1",
+    "axios": "^1.2.1",
     "chart.js": "3.9.1",
+    "cors": "^2.8.5",
     "date-fns": "2.29.3",
     "formik": "2.2.9",
     "next": "12.3.0",
+    "next-redux-wrapper": "^8.0.0",
     "nprogress": "0.2.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "4.3.1",
     "react-dom": "18.2.0",
     "react-perfect-scrollbar": "1.5.8",
+    "react-redux": "^8.0.5",
+    "typescript": "^4.9.4",
     "uuid": "9.0.0",
     "yup": "0.32.11"
   },
   "devDependencies": {
+    "@types/node": "18.11.14",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-logger": "^3.0.9",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.56.2"
   }
 }
