--- a/package.json
+++ b/package.json
@@ -13,42 +13,61 @@
   },
   "dependencies": {
     "@emotion/cache": "11.10.3",
-    "@emotion/react": "11.10.4",
     "@emotion/server": "11.10.0",
-    "@emotion/styled": "11.10.4",
-    "@mui/icons-material": "5.10.3",
     "@mui/lab": "5.0.0-alpha.99",
-    "@mui/material": "5.10.5",
     "@mui/system": "5.10.5",
-    "@mui/x-date-pickers": "5.0.1",
+    "@zalter/identity-js": "1.2.1",
+    "chart.js": "3.9.1",
+    "nprogress": "0.2.0",
+    "react-chartjs-2": "4.3.1",
+    "react-perfect-scrollbar": "1.5.8",
+    "uuid": "9.0.0",
+    "yup": "0.32.11",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.1",
+    "@next/bundle-analyzer": "^12.2.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/lodash": "^4.14.191",
-    "@zalter/identity-js": "1.2.1",
-    "axios": "^1.2.1",
-    "chart.js": "3.9.1",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "date-fns": "2.29.3",
-    "formik": "2.2.9",
-    "next": "12.3.0",
-    "next-redux-wrapper": "^8.0.0",
-    "nprogress": "0.2.0",
-    "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-chartjs-2": "4.3.1",
-    "react-dom": "18.2.0",
-    "react-perfect-scrollbar": "1.5.8",
-    "react-redux": "^8.0.5",
-    "typescript": "^4.9.4",
-    "uuid": "9.0.0",
-    "yup": "0.32.11"
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
+    "immer": "^9.0.15",
+    "moment": "^2.29.4",
+    "next": "^12.2.2",
+    "next-redux-wrapper": "^7.0.5",
+    "prettier": "^2.8.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.40.0",
+    "react-redux": "^8.0.2",
+    "recoil": "0.7.3-alpha.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "18.11.14",
-    "@types/react-redux": "^7.1.24",
     "@types/redux-logger": "^3.0.9",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "sass": "^1.56.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.24",
+    "@types/webpack": "^5.28.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "redux-logger": "^3.0.6",
-    "sass": "^1.56.2"
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.5.0",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
