--- a/package.json
+++ b/package.json
@@ -12,59 +12,65 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
+    "@date-io/dayjs": "^2.16.0",
+    "@date-io/luxon": "^2.16.1",
+    "@date-io/moment": "^2.16.1",
     "@emotion/cache": "11.10.3",
-    "@emotion/server": "11.10.0",
-    "@mui/lab": "5.0.0-alpha.99",
-    "@mui/system": "5.10.5",
-    "@zalter/identity-js": "1.2.1",
-    "chart.js": "3.9.1",
-    "nprogress": "0.2.0",
-    "react-chartjs-2": "4.3.1",
-    "react-perfect-scrollbar": "1.5.8",
-    "uuid": "9.0.0",
-    "yup": "0.32.11",
     "@emotion/react": "^11.9.3",
+    "@emotion/server": "11.10.0",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "5.0.0-alpha.99",
     "@mui/material": "^5.9.0",
-    "@mui/x-date-pickers": "^5.0.0-beta.1",
+    "@mui/system": "5.10.5",
+    "@mui/x-date-pickers": "^5.0.11",
     "@next/bundle-analyzer": "^12.2.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/lodash": "^4.14.191",
+    "@zalter/identity-js": "1.2.1",
     "axios": "^0.27.2",
+    "chart.js": "3.9.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
     "immer": "^9.0.15",
     "moment": "^2.29.4",
     "next": "^12.2.2",
     "next-redux-wrapper": "^7.0.5",
+    "nprogress": "0.2.0",
     "prettier": "^2.8.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "4.3.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.40.0",
+    "react-perfect-scrollbar": "1.5.8",
     "react-redux": "^8.0.2",
     "recoil": "0.7.3-alpha.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "uuid": "9.0.0",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.11.14",
-    "@types/redux-logger": "^3.0.9",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "sass": "^1.56.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
+    "@types/redux-logger": "^3.0.9",
     "@types/webpack": "^5.28.0",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "fork-ts-checker-webpack-plugin": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
     "redux-logger": "^3.0.6",
+    "sass": "^1.56.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "webpack": "^5.72.1",
