--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev:template": "next ./src_template",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "export": "next export"
   },
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
@@ -53,6 +51,7 @@
     "recoil": "0.7.3-alpha.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "typescript": "^4.0.5",
     "uuid": "9.0.0",
@@ -65,8 +64,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux-logger": "^3.0.9",
     "@types/webpack": "^5.28.0",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "eslint": "8.22.0",
     "fork-ts-checker-webpack-plugin": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
     "redux-logger": "^3.0.6",
