--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
     "yup": "0.32.11"
   },
   "devDependencies": {
+    "@types/chance": "1.1.3",
     "@types/node": "18.11.14",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
     "@types/redux-logger": "^3.0.9",
     "@types/webpack": "^5.28.0",
+    "chance": "1.1.9",
     "eslint": "8.22.0",
     "fork-ts-checker-webpack-plugin": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
